# ClipsApi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test.py
src/: combinations.py  config.py  downloads.py  main.py  models.py  scripts.py  settings.py  utils.py  voice_generation.py  voices.json
src/api/: celery_app.py  celery_worker.py  dependecies.py  main_router.py  tasks.py  utils.py
src/downloaders/: __init__.py  blocks_manager.py  dir_manager.py  download_all_files.py  media_manager.py  scripts.py  storage_manager.py  test.py  voice_generation.py
src/videos/: combinations.py  process_setup.py  processor_logger.py  storage_manager.py  video_processor.py
